--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="enter_phone_no">Enter Phone No.</string>
     <string name="enter_link_of_medical_certificate">Enter Link of Medical Certificate</string>
     <string name="submit">Submit</string>
+    <string name="view_history">View History</string>
 </resources>
